--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         .background{
-            background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='50px' width='50px'><text x='-5' y='42' fill='red' font-size='45'>🕧</text></svg>");
+            background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='50px' width='1483px'><text x='0' y='40' fill='red' font-size='45'>🕧🕐🕜🕑🕝🕒🕞🕓🕟🕔🕠🕕🕡🕖🕢🕗🕣🕘🕤🕙🕥🕚🕦🕛</text></svg>");
             background-repeat: repeat;
             height: 500000px;
             width: 500000px;
